Show the EmployeeList in a card-Deck - Spinner with Threading(3000) in EmployeeListBase class

--- a/EmployeeManagement.Web/Pages/EmployeeList.razor
+++ b/EmployeeManagement.Web/Pages/EmployeeList.razor
@@ -1,7 +1,76 @@
 ﻿@page "/"
-@inherits EmployeeList
+@inherits EmployeeListBase
 
 <h3>Employee List</h3>
 
+<style>
+    .card {
+        max-width: 221px;
+        min-width: 220px;
+        border-color: rgba(57,108,164,0.2);
+    }
 
+    .card-footer {
+        max-height: 50px;
+    }
 
+    .card-title {
+        font-weight: 300;
+        font-size: large;
+    }
+
+    .card-body {
+        min-height: 50px;
+        max-height: 65px;
+        background-color: rgb(90, 128, 170);
+        color: white;
+    }
+
+    .btn-link {
+        color: white;
+    }
+
+        .btn-link:hover {
+            color: snow;
+        }
+
+    .h1 {
+        font-weight: 300;
+    }
+
+    .fa_custom {
+        color: rgb(90, 128, 170);
+    }
+
+    .fa_custom_del {
+        color: rgb(162,75,64);
+    }
+
+    #search {
+        margin-right: -15px;
+    }
+</style>
+@if (Employees == null)
+{
+    <div class="spinner"></div>
+}
+else
+{
+<div class="card-deck">
+    @foreach (var employee in Employees)
+    {
+        <div class="card m-3 shadow-sm">
+            <img class="img-Thumbnail" src="@employee.PhotoPath" asp-append-version="true" alt="Card image cap" />
+            <div class="card-body">
+                <h5 class="card-title">@employee.FirstName @employee.LastName</h5>
+            </div>
+
+            <div class="card-footer">
+                <a href="#"><span class="far fa-eye fa_custom"></span></a>
+                <a class="ml-3" href="#"><span class="fas fa-pencil-alt fa_custom"></span></a>
+                <a href="#" class="float-right"><i class="fas fa-trash-alt fa_custom_del"></i></a>
+            </div>
+        </div>
+    }
+</div>
+}
