--- a/EmployeeManagement.Web/Pages/_Host.cshtml
+++ b/EmployeeManagement.Web/Pages/_Host.cshtml
@@ -13,6 +13,7 @@
     <title>EmployeeManagement.Web</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/font-awesome/css/fontawesome.min.css" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
@@ -32,5 +33,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="css/font-awesome/js/all.min.js"></script>
 </body>
 </html>
