--- a/EmployeeManagement.Web/Pages/EmployeeList.razor
+++ b/EmployeeManagement.Web/Pages/EmployeeList.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @inherits EmployeeListBase
 
-<h3>Employee List</h3>
+<h3>Employee List - @SelectedEmployeesCount</h3>
 
 <style>
     .card {
@@ -61,7 +61,8 @@ else
 <div class="card-deck">
     @foreach (var employee in Employees)
     {
-        <DisplayEmployee Employee="employee" ShowFooter="ShowFooter"></DisplayEmployee>
+        <DisplayEmployee Employee="employee" ShowFooter="ShowFooter"
+                         OnEmployeeSelection="EmployeeSelectionChanged"></DisplayEmployee>
     }
 </div>
 }
