--- a/EmployeeManagement.Web/Pages/DisplayEmployee.razor
+++ b/EmployeeManagement.Web/Pages/DisplayEmployee.razor
@@ -13,7 +13,7 @@
     {
      <div class="card-footer">
          <a href="@($"employeedetails/{Employee.EmployeeId}")"><span class="far fa-eye fa_custom"></span></a>
-         <a class="ml-3" href="#"><span class="fas fa-pencil-alt fa_custom"></span></a>
+         <a class="ml-3" href="@($"editemployee/{Employee.EmployeeId}")"><span class="fas fa-pencil-alt fa_custom"></span></a>
          <a href="#" class="float-right"><i class="fas fa-trash-alt fa_custom_del"></i></a>
      </div>
     }
