--- a/EmployeeManagement.Web/_Imports.razor
+++ b/EmployeeManagement.Web/_Imports.razor
@@ -8,4 +8,5 @@
 @using EmployeeManagement.Web
 @using EmployeeManagement.Web.Shared
 @using EmployeeManagement.Models
+@using EmployeeManagement.Components
 
