--- a/EmployeeManagement.Web/App.razor
+++ b/EmployeeManagement.Web/App.razor
@@ -1,5 +1,5 @@
-<Router AppAssembly="@typeof(Program).Assembly">
-    <Found Context="routeData">
+<Router AppAssembly="@typeof(Program).Assembly" Context="routeData">
+    <Found>
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
     <NotFound>
