--- a/EmployeeManagement.Web/wwwroot/css/site.css
+++ b/EmployeeManagement.Web/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -31,7 +31,8 @@ app {
 }
 
     .main .top-row {
-        background-color: #f7f7f7;
+        background-color: #05183b;
+        background-image: linear-gradient(rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.25) 25%, rgba(0,0,0,0) 70%);
         border-bottom: 1px solid #d6d5d5;
         justify-content: flex-end;
     }
@@ -181,26 +182,3 @@ app {
         display: block;
     }
 }
-
-.spinner {
-    border: 16px solid silver;
-    border-top: 16px solid #337AB7;
-    border-radius: 50%;
-    width: 80px;
-    height: 80px;
-    animation: spin 700ms linear infinite;
-    top: 40%;
-    left: 55%;
-    position: absolute;
-}
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg)
-    }
-
-    100% {
-        transform: rotate(360deg)
-    }
-}
-
