--- a/EmployeeManagement.Web/Shared/MainLayout.razor
+++ b/EmployeeManagement.Web/Shared/MainLayout.razor
@@ -5,6 +5,9 @@
 </div>
 
 <div class="main">
+    <div class="top-row px-4">
+        /* Login Display */
+    </div>
     <div class="content px-4">
         @Body
     </div>
